--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -160,7 +160,7 @@
                 <td md-cell
                     ng-repeat="column in columns"
                     ng-show="preferences.reportViewColumns[column.key].visible  || column.role=='name'"
-                    ng-class="{'red':row.data[column.key] > 0 && column.key == 'roi','green':row.data[column.key] < 0 && column.key == 'roi'}">
+                    ng-class="{'red':row.data[column.key] < 0 && column.key == 'roi','green':row.data[column.key] > 0 && column.key == 'roi'}">
                     <!--ng-click="openMenu($event, row, column.role)"-->
                   <span ng-if="column.role=='name'">
                     <md-menu-bar style="padding: 0;">
@@ -194,7 +194,7 @@
               <tr md-row>
                 <td md-cell ng-if="treeLevel>1"></td>
                 <td md-cell>Total</td>
-                <td md-cell ng-class="{'red':report.totals[column.key] > 0 && column.key == 'roi','red':report.totals[column.key] < 0 && column.key == 'roi'}" ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible && !$first">
+                <td md-cell ng-class="{'red':report.totals[column.key] < 0 && column.key == 'roi','green':report.totals[column.key] > 0 && column.key == 'roi'}" ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible && !$first">
                   {{isNeedCurrency(column.key) ? (report.totals[column.key] | currency) : (isNeedPercent(column.key) ? ((report.totals[column.key] || 0) + '%') : report.totals[column.key])}}
                 </td>
                 <!-- <td md-cell></td> -->
