官网倒计时js 后台plan样式调整

--- a/www.newbidder.com/mini-tutorial.html
+++ b/www.newbidder.com/mini-tutorial.html
@@ -5,7 +5,6 @@
 <!--[if gt IE 8]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <!--[if IE 9 ]><html id="ne_wrap" class="ne_ua_ie9"> <![endif]-->
 <!--[if (gte IE 10)|!(IE)]><!-->
-<link rel="stylesheet" href="../newbidder-bj/css/style.css">
 <html id="ne_wrap" phone="1"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -97,7 +96,7 @@
             </p>
             <p>Go to Setup. It’s the gear icon at the top right corner of the screen.<br>
                 If you’re promoting ONE offer on your landing page, use the click URL.<br>
-                If you’re promoting multiple offers on your landing page, here is what you do. For offer 1, it’s going to be http://otuyh.trackvoluum.com/click/1″. For offer 2, it’s going to be http://otuyh.trackvoluum.com/click/2. Notice that the numbers change at the end of the URL.
+                If you’re promoting multiple offers on your landing page, here is what you do. For offer 1, it’s going to be http://otuyh.tracknewbidder.com/click/1″. For offer 2, it’s going to be http://otuyh.tracknewbidder.com/click/2. Notice that the numbers change at the end of the URL.
                 Take the URL, and put it where you want the user to click on your landing page.
             </p>
             <p>Newbidder allows you to pull in user data to your pages and you can use it in your headlines.
