--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -78,7 +78,8 @@
                     <span class="jump-off">% <em>OFF</em></span>
                     <span>sitewide</span>
                 </div>
-                <button class="jumbo-btn"><i class="icon-time"></i>5 Days Left</button>
+                <button class="jumbo-btn"><i class="icon-time"></i>
+                    <span id="jumbo-btn">20 Days Left</span></button>
 
             </div>
         </div>
@@ -192,7 +193,7 @@
          <li class="w-md w-md3 h-line2">
              <div class="p-header-box">
                  <h2>PRO</h2>
-                 <div class="p-header p-header2" >
+                 <div class="p-header p-header2">
                      <b class="line"></b>
                      <small class="money-icon">$</small>
                      <span class="money-size">99</span>
@@ -218,8 +219,8 @@
                  <a href="http://panel.newbidder.com/#/access/signup">
                  <button class="btn p-btn btn-three p-btn-02" type="button"><p>Choose Plan<i class="icon-angle-right"></i></p></button>
                  </a>
-
-           </div></li>
+           </div>
+         </li>
        <li class="w-md w-md3 h-line3">
            <div class="p-header-box">
            <h2>AGENCY</h2>
@@ -624,6 +625,7 @@
 <script>
     $(document).ready(function(){
         showBg();
+        getLeftDays();
     });
 </script>
 <script type="text/javascript">
@@ -640,8 +642,20 @@
     function closeBg() {
         $("#fullbg,#dialog").hide();
     }
+    function getLeftDays() {
+        var date = new Date();
+        var month = date.getMonth() + 1;
+        var strDate = date.getDate();
+        if (month == 3) {
+            var leftDays = 31 - strDate + 1;
+            if (leftDays<=0) {
+                $(".jumbo-text").text("");
+            } else {
+                $("#jumbo-btn").text(leftDays + " Days Left");
+            }
+        }
+    }
 </script>
-
 <script src="js/map.js"></script>
 <script src="js/jquery.fullPage.min.js" type="text/javascript"></script>
 </html>
