--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -84,13 +84,13 @@
             </div>
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applySearch()" translate>apply</md-button>
 
-            <md-button class="md-raised md-primary cs-compact cs-add-button down-btn" ng-click="downLoad($event)" translate><i class="icon-download-alt"></i>Export CSV</md-button>
+            <md-button class="md-raised md-primary cs-compact cs-add-button green-btn" ng-click="downLoad($event)" translate><i class="icon-download-alt"></i>Export CSV</md-button>
 
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="editItem($event)" translate>add</md-button>
 
             <a ng-hide="perfType == 'campaign'" ng-click="addNewCampaign()">
               <md-button
-                class="md-raised md-primary cs-compact cs-add-button green-btn"
+                class="md-raised md-primary cs-compact cs-add-button add-btn"
                 translate
               >
                 <i class="icon-plus"></i>
