--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -74,7 +74,7 @@
                         <md-option value="0"></md-option>
                         <md-option value="{{affiliate.id}}" ng-repeat="affiliate in affiliates track by $index">{{affiliate.name}}</md-option>
                     </md-select>
-                    <span class="btn btn-primary blue-btn" ng-click="addAffiliateNetwork()">Add affilaite network</span>
+                    <span class="btn btn-primary blue-btn" ng-click="addAffiliateNetwork()">Add affiliate network</span>
                 </div>
             </div>
             <div class="form-group">
