--- a/Front/src/tpl/signin.html
+++ b/Front/src/tpl/signin.html
@@ -35,11 +35,11 @@
                 <a class="forgot-pwd" ng-click="resetPassword()">Forgot your password?</a>
                 <div class="line line-dashed"></div>
                 <p class="text-center sign-text">
-                    <small>Do not have an account?</small><a ui-sref="access.signup" class="btn signup-btn">Create an account</a>
-              </p>
+                    <small>Do not have an account?</small>
+                    <a ui-sref="access.signup" class="btn signup-btn">Sign up</a>
+                </p>
           </form>
-      </div>
-
+    </div>
   </div>
   <div class="text-center boot-bg navbar-fixed-bottom">
       <p>
@@ -47,3 +47,4 @@
       </p>
   </div>
 </div>
+ <a class="return" target="_blank" href="http://www.newbidder.com"><i class="icon-long-arrow-left"></i> Return to homepage</a>
