--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -475,9 +475,9 @@
                     <md-item-template>
                       <span md-highlight-text="offer._searchText">{{item.name}}</span>
                     </md-item-template>
-                    <md-not-found>
+                    <!-- <md-not-found>
                       No matching found.
-                    </md-not-found>
+                    </md-not-found> -->
                   </md-autocomplete>
                   <i class="material-icons md-mini edit-btn" ng-show="offer._def" ng-click="editOffer($event, offer)">edit</i>
                 </div>
