--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -58,25 +58,20 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label class="col-sm-3 control-label">Country: </label>
                 <div class="col-sm-7 my-select">
                     <md-select class="cs-subform-select" aria-label="Country" name="country" ng-model="item.country" ng-change="countryChanged(item.country)" ng-disabled="countryInputDisabled">
 
-                        <md-option value="{{cou.value}}" ng-repeat="cou in countries">{{cou.display}}</md-option>
+                        <md-option value="{{cou.value}}" ng-repeat="cou in countriess">{{cou.display}}</md-option>
                     </md-select>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
-                <md-contact-chips
-                    ng-model="ctrl.contacts"
-                    md-contacts="ctrl.querySearch($query)"
-                    md-contact-name="name"
-                    md-contact-code="code"
-                    md-require-match="true"
-                    md-highlight-flags="i"
-                    placeholder="To">
-                </md-contact-chips>
+                <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
+                <div class="col-sm-7">
+                    <selectize config='countryFilter.config' options='countryFilter.options' ng-model="countries" required></selectize>
+                </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Affiliate network: </label>
