--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/app.css"/>
     <link rel="stylesheet" href="assets/css/my.css"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/ts-offer-report.css"/>
     <!-- endbuild -->
 
     <style type="text/css">
@@ -106,6 +107,7 @@
 <script src="js/controllers/dashBoard.js"></script>
 <script src="js/controllers/conversion.js"></script>
 <script src="js/controllers/tsReport.js"></script>
+<script src="js/controllers/tsOfferReport.js"></script>
 <script src="js/directives/permission.js"></script>
 <!-- endbuild -->
 
