--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -124,6 +124,16 @@
                     </span>
                 </a>
             </li>
+            <li ui-sref-active="active" class="nav-tips" has-permission="report.tsReport.show" operation="show">
+                <a ui-sref="app.report.tsOfferReport" md-ink-ripple>
+                    <em class="rd"></em>
+                    <span>{{'Network Offers' | translate}}
+                     <i class="icon-question-sign">
+                       <span class="nav-tips-font">Sychronize offer list from 3rd party affiliate networks</span>
+                      </i>
+                    </span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
