--- a/Front/src/tpl/close-confirm-dialog.html
+++ b/Front/src/tpl/close-confirm-dialog.html
@@ -1,21 +1,30 @@
 <md-dialog class="md-default-theme" ng-cloak>
+  <md-toolbar>
+      <div class="md-toolbar-tools cam-title">
+          <h2 class="md-title">{{ctrl.title | translate}}</h2>
+      </div>
+  </md-toolbar>
     <md-dialog-content class="md-dialog-content">
-        <h2 class="md-title">{{ctrl.title | translate}}</h2>
         <p>{{ctrl.content | translate}}</p>
-
-        <p class="md-warn" ng-if="ctrl.error" layout="row" layout-align="start center">
+        <!-- <p class="md-warn" ng-if="ctrl.error" layout="row" layout-align="start center">
             <md-icon>error_outline</md-icon>
             <span>&nbsp; {{ctrl.error}}</span>
+        </p> -->
+        <p class="text-danger" ng-if="ctrl.error" layout="row" layout-align="center center">
+            <span><md-icon class="text-danger" style="position: relative; top: 4px;">error_outline</md-icon>{{ctrl.error}}</span>
         </p>
-
         <div layout="row" layout-sm="column" layout-align="space-around">
-            <md-progress-circular md-mode="indeterminate" ng-show="ctrl.onprocess" class="md-accent"
-                                  md-diameter="30"></md-progress-circular>
+            <md-progress-circular
+              md-mode="indeterminate"
+              ng-show="ctrl.onprocess"
+              class="md-accent"
+              md-diameter="30"
+              ></md-progress-circular>
         </div>
     </md-dialog-content>
 
     <md-dialog-actions>
-        <md-button class="md-primary md-raised" ng-click="ctrl.ok()">{{'ok' | translate}}</md-button>
-        <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
+        <md-button class="md-primary md-raised disabled-btn" ng-click="ctrl.ok()">{{'ok' | translate}}</md-button>
+        <md-button class="md-primary red-btn" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
 </md-dialog>
