--- a/Front/src/tpl/ts-offer-dialog.html
+++ b/Front/src/tpl/ts-offer-dialog.html
@@ -23,7 +23,11 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">AffiliateTemplate<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <md-select name="ts" class="form-control form-control-none" ng-model="formData.affiliateId" ng-change="affilateChanged(formData.affiliateId)" required>
+                    <md-select name="ts" class="form-control form-control-none"
+                      ng-model="formData.affiliateId"
+                      ng-change="affilateChanged(formData.affiliateId)"
+                      required
+                    >
                         <md-option value=""></md-option>
                         <md-option value="{{affiliateTemplate.id}}" ng-repeat="affiliateTemplate in affiliateTemplates">{{affiliateTemplate.name}}</md-option>
                     </md-select>
@@ -35,7 +39,7 @@
             <div class="form-group" ng-show="affiliateTemplateObject.apiMode !== 2">
                 <label class="col-sm-3 control-label">Token<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" ng-model="formData.token" required name="token"/>
+                    <input type="text" class="form-control" ng-model="formData.token" ng-required="affiliateTemplateObject.apiMode == 1 || affiliateTemplateObject.apiMode == 3" name="token"/>
                     <span class="text-danger" ng-show="(editForm.token.$touched || editForm.$submitted) && editForm.token.$invalid">
                         <span ng-show="editForm.token.$error.required">Token is required.</span>
                     </span>
@@ -44,7 +48,7 @@
             <div class="form-group" ng-show="affiliateTemplateObject.apiMode !== 1">
                 <label class="col-sm-3 control-label">Account<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" ng-model="formData.account" required name="account"/>
+                    <input type="text" class="form-control" ng-model="formData.account" ng-required="affiliateTemplateObject.apiMode == 2 || affiliateTemplateObject.apiMode == 3" name="account"/>
                     <span class="text-danger" ng-show="(editForm.account.$touched || editForm.$submitted) && editForm.account.$invalid">
                         <span ng-show="editForm.account.$error.required">Account is required.</span>
                     </span>
@@ -53,7 +57,7 @@
             <div class="form-group" ng-show="affiliateTemplateObject.apiMode !== 1">
                 <label class="col-sm-3 control-label">Password<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" ng-model="formData.password" required name="password"/>
+                    <input type="text" class="form-control" ng-model="formData.password" ng-required="affiliateTemplateObject.apiMode == 2 || affiliateTemplateObject.apiMode == 3" name="password"/>
                     <span class="text-danger" ng-show="(editForm.password.$touched || editForm.$submitted) && editForm.password.$invalid">
                         <span ng-show="editForm.password.$error.required">Password is required.</span>
                     </span>
@@ -62,8 +66,8 @@
         </form>
     </md-dialog-content>
     <md-dialog-actions>
-        <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid || saveStatus">{{'save' | translate}}
+        <md-button class="md-primary disabled-btn" ng-click="ctrl.save()" ng-disabled="editForm.$invalid || saveStatus">{{'save' | translate}}
         </md-button>
-        <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
+        <md-button class="md-primary red-btn" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
 </md-dialog>
