--- a/Front/src/tpl/ts-offer-report.html
+++ b/Front/src/tpl/ts-offer-report.html
@@ -3,14 +3,14 @@
     <div class="cs-action-bar clearfix">
       <div class="right-select right-select-left">
         <div class="cs-subform-control">
-          <md-select class="cs-subform-select" ng-model="query.id">
+          <md-select class="cs-subform-select" ng-model="thirdAffiliateId" ng-change="thirdAffiliateChanged(thirdAffiliateId)">
               <md-option value="{{thirdAffiliate.id}}" ng-repeat="thirdAffiliate in thirdAffiliates">{{thirdAffiliate.name}}</md-option>
           </md-select>
         </div>
         <md-button
           class="md-raised md-primary cs-compact cs-add-button blue-btn"
           ng-click="load($event)"
-          ng-show="thirdAffiliates.length > 0"
+          ng-show="thirdAffiliates.length > 0 && !taskProgress[thirdAffiliateId].progressStatus"
           translate
         >
             load
@@ -24,20 +24,36 @@
         </md-button>
         <md-button
           class="md-raised md-primary cs-compact cs-add-button blue-btn"
-          ng-click="addOrEditThirdAffiliates(query.id)"
+          ng-click="addOrEditThirdAffiliates(thirdAffiliateId)"
           translate
           ng-show="thirdAffiliates.length > 0"
         >
             edit
+        </md-button>
+        <md-button
+          class="md-raised md-primary cs-compact cs-add-button blue-btn"
+          ng-click="importOffers(1)"
+          translate
+          ng-disabled="!selected.length"
+        >
+            import seleted offers
+        </md-button>
+        <md-button
+          class="md-raised md-primary cs-compact cs-add-button blue-btn"
+          ng-click="importOffers(2)"
+          translate
+          ng-disabeld="!(offers && offers.length > 0)"
+        >
+            import all offers
         </md-button>
       </div>
   </div>
 </div>
 
 <div flex layout="column" class="cs-page-content report ts-offer-report">
-  <div class="load-progress-box">
+  <div class="load-progress-box" ng-show="taskProgress[thirdAffiliateId].progressStatus">
     <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">60%</div>
+      <div class="progress-bar" role="progressbar" style="width: {{taskProgress[thirdAffiliateId].progress}}%;">{{taskProgress[thirdAffiliateId].progressNum}}%</div>
     </div>
     <div class="load-progress-content">
       <i class="icon-smile"></i>
@@ -46,25 +62,25 @@
     </div>
   </div>
 
-  <div class="table-box">
+  <div class="table-box" ng-show="taskProgress[thirdAffiliateId].offerStatus">
     <md-table-container>
         <table md-table md-row-select="options.rowSelection" multiple="{{options.multiSelect}}" ng-model="selected" md-progress="promise">
-            <thead md-head md-order="query.order" fix-head>
+            <thead md-head md-order="query.order">
               <tr md-row>
-                <th md-column md-order-by="campaignName">Campaign</th>
-                <th md-column md-order-by="campaignId">Campaign ID</th>
-                <th md-column md-order-by="impressions">Impressions</th>
-                <th md-column md-order-by="clicks">Clicks</th>
-                <th md-column md-order-by="cost">Cost</th>
+                <th md-column>Campaign</th>
+                <th md-column>Campaign ID</th>
+                <th md-column>Impressions</th>
+                <th md-column>Clicks</th>
+                <th md-column>Cost</th>
               </tr>
             </thead>
             <tbody md-body >
-              <tr md-row md-select="dessert.id" ng-repeat="dessert in desserts.data" md-auto-select="options.autoSelect">
-                <td md-cell><a ng-click="offerDetail('')"><span>{{dessert.calories.value}}</span></a></td>
-                <td md-cell><span>{{dessert.calories.value}}</span></td>
-                <td md-cell><span>{{dessert.calories.value}}</span></td>
-                <td md-cell><span>{{dessert.calories.value}}</span></td>
-                <td md-cell><span>{{dessert.calories.value}}</span></td>
+              <tr md-row md-select="offer.offerId" ng-repeat="offer in offers" md-auto-select="options.autoSelect">
+                <td md-cell><span>{{offer.offerId}}</span></td>
+                <td md-cell><span>{{offer.name}}</span></td>
+                <td md-cell><span>{{offer.previewLink}}</span></td>
+                <td md-cell><span>{{offer.payoutMode}}</span></td>
+                <td md-cell><span>{{offer.payoutValue}}</span></td>
               </tr>
             </tbody>
         </table>
@@ -76,6 +92,7 @@
     md-page="query.page"
     md-total="{{report.totalRows}}"
     md-page-select
+    ng-show="taskProgress[thirdAffiliateId].offerStatus"
   >
   </md-table-pagination>
 </div>
