NB-380 pay success dialog,NB-133 dashboard campaign列表可以点击进入

--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -25,7 +25,7 @@
             </li>
         </ul>
     </div>
-    <p class="text-danger note" ng-show="item.plan">Free plan is charging for the purpose of confirming validated Users，1$ will be returned to your account in 24 hours.</p>
+    <p class="text-danger note" ng-show="item.plan">Free plan is charging for the purpose of confirming validated Users，1$ will be returned to your account in 24 hours via sending your Alipay or Paypal Account to finance@newbidder.com .</p>
     <!-- <section id="sliderPricing">
         <div>
             <div class="row">
