--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -125,6 +125,7 @@
 </div>
 <div flex layout="column" class="cs-page-content report">
 
+<div class="breadcrumb-div">
 <div ng-if="filters.length > 0">
         <ul class="breadcrumb">
         <li ng-repeat="filter in filters track by $index">
@@ -136,6 +137,7 @@
             </em>
         </li>
     </ul>
+</div>
 </div>
 
 <div class="table-box">
