--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -137,7 +137,7 @@
                     <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
                   </td>
                 </tr>
-                <tr ng-if="tableData[tbl]" ng-repeat="row in tableData[tbl]">
+                <tr ng-if="tableData[tbl]" ng-repeat="row in tableData[tbl]" ng-click="goGroupByOffer(tbl,row)" class="campaign-tr">
                   <td>{{$index+1}}</td>
                   <td>
                       <em ng-show="row[tbl+'Name']">{{row[tbl+'Name']}}</em>
