--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Performance Marketing Tracking!The Most Technologically Advanced Tracking Software in the Universe.Expand Today Your Performance &amp; Affiliate Marketing!"/>
     <meta name="keywords" content="Tracking,Affiliate Tracking,Tracker,SaaS,Newbidder">
-    <title>Newbidder</title>
+    <title>Newbidder- Free One Stop Tracker for Affiliate Marketing</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/swiper.min.css">
