--- a/Front/src/tpl/signin.html
+++ b/Front/src/tpl/signin.html
@@ -47,4 +47,4 @@
       </p>
   </div>
 </div>
- <a class="return" target="_blank" href="http://www.newbidder.com"><i class="icon-long-arrow-left"></i> Return to homepage</a>
+ <a class="return" href="http://www.newbidder.com"><i class="icon-long-arrow-left"></i> Return to homepage</a>
