--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -82,7 +82,7 @@
                     <md-option value="2">All</md-option>
                 </md-select>
             </div>
-            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn apply-change-btn" ng-model="btnName" ng-click="applySearch()" translate>{{btnName}}</md-button>
+            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn apply-change-btn" ng-class="{'apply-btn': applyBtn}" ng-model="btnName" ng-click="applySearch()" ng-disabled="disabled" translate>{{btnName}}</md-button>
 
             <md-button class="md-raised md-primary cs-compact cs-add-button green-btn" ng-click="downLoad($event)" translate><i class="icon-download-alt"></i>Export CSV</md-button>
 
