--- a/Front/src/tpl/signup.html
+++ b/Front/src/tpl/signup.html
@@ -117,7 +117,7 @@
         <small class="text-muted">All Rights Reserved &copy; 2017</small>
     </p>
 </div>
-<a class="return" target="_blank" href="http://www.newbidder.com"><i class="icon-long-arrow-left"></i> Return to homepage</a>
+<a class="return" href="http://www.newbidder.com"><i class="icon-long-arrow-left"></i> Return to homepage</a>
 
 <!-- Google Code for sign up Conversion Page -->
 <script type="text/javascript">
