--- a/Front/src/tpl/ts-offer-report.html
+++ b/Front/src/tpl/ts-offer-report.html
@@ -10,7 +10,7 @@
         <md-button
           class="md-raised md-primary cs-compact cs-add-button blue-btn"
           ng-click="load($event)"
-          ng-show="thirdAffiliates.length > 0 && !taskProgress[thirdAffiliateId].progressStatus"
+          ng-disabled="!(thirdAffiliates.length > 0 && !taskProgress[thirdAffiliateId].progressStatus)"
           translate
         >
             load
